--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
       margin: 0;
       font-size: 1em;
       color: #333;
+      word-break: break-word;
+      overflow-wrap: anywhere;
+      line-height: 1.2;
     }
     .graph-info p {
       margin: 5px 0 0;
       font-size: 0.9em;
       color: #666;
+    }
+    @media (max-width: 600px) {
+      .graph-info h3 {
+        font-size: 0.85em;
+      }
     }
   </style>
 </head>
