--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@
 </head>
 <body>
   <h1>Graph Visualizations (SVG)</h1>
-  <div class="graph-grid">
+<p style="text-align:center; font-size:1.1em; color:#444;"><strong>Total node references:</strong> 6988<br>
+<strong>Unique node IDs:</strong> 2200</p>
+<div class="graph-grid">
     <div class="graph-card">
       <a href="svg_output/ba.svg" target="_blank">
         <img src="svg_output/ba.svg" alt="ba.svg">
@@ -1005,6 +1007,15 @@
       <div class="graph-info">
         <h3>buuv_buuvj.svg</h3>
         <p>Nodes: 290</p>
+      </div>
+    </div>
+    <div class="graph-card">
+      <a href="svg_output/cukur.svg" target="_blank">
+        <img src="svg_output/cukur.svg" alt="cukur.svg">
+      </a>
+      <div class="graph-info">
+        <h3>cukur.svg</h3>
+        <p>Nodes: 63</p>
       </div>
     </div>
     <div class="graph-card">
